Removed Warnings